--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -85,7 +85,7 @@
     </style>
 </head>
 <body>
-<form class="layui-form" action="/index">
+<form class="layui-form" action="">
     <div class="container">
         <button class="close" title="关闭">X</button>
         <div class="layui-form-mid layui-word-aux">
