--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -199,7 +199,7 @@
                     password: $("#password").val()
                 },
                 success: function (data) {
-                    console.log(JSON.stringify(data))
+                    console.log(JSON.stringify(data));
                     //window.location.href = data.data;
                 },
                 error: function (data) {
